# eth-staking-smith

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  holesky.keys  hoodi.key
.github/workflows/: ci.yml  release.yml
scripts/: generate_keys_folder.py
src/: beacon_node.rs  bls_to_execution_change.rs  chain_spec.rs  deposit.rs  key_material.rs  keystore.rs  lib.rs  main.rs  networks.rs  seed.rs  utils.rs  validators.rs  wallet.rs
src/bls_to_execution_change/: constants.rs  mod.rs  operations.rs  operator.rs  test.rs
src/cli/: batch_presigned_exit_message.rs  bls_to_execution_change.rs  existing_mnemonic.rs  mod.rs  new_mnemonic.rs  presigned_exit_message.rs
src/voluntary_exit/: mod.rs  operations.rs  operator.rs  test.rs
tests/: existing_mnemonic.rs  lib.rs
tests/e2e/: batch_presigned_exit_message.rs  bls_to_execution_change.rs  existing_mnemonic.rs  mod.rs  new_mnemonic.rs  presigned_exit_message.rs
tests/e2e/expected_testdata/multiple_validators/: deposit_data-1670231001.json  keystore-m_12381_3600_0_0_0-1670230999.json  keystore-m_12381_3600_1_0_0-1670231000.json  keystore-m_12381_3600_2_0_0-1670231000.json
tests/e2e/expected_testdata/multiple_validators/hoodi/: deposit_data-1755071454.json  keystore-m_12381_3600_0_0_0-1755071454.json  keystore-m_12381_3600_1_0_0-1755071454.json  keystore-m_12381_3600_2_0_0-1755071454.json
tests/e2e/expected_testdata/multiple_validators/sepolia/: deposit_data-1755013393.json  keystore-m_12381_3600_0_0_0-1755013393.json  keystore-m_12381_3600_1_0_0-1755013393.json  keystore-m_12381_3600_2_0_0-1755013393.json
tests/e2e/expected_testdata/regenerate_from_seed_index/: deposit_data-1670927040.json  keystore-m_12381_3600_1_0_0-1670927039.json  keystore-m_12381_3600_2_0_0-1670927039.json
tests/e2e/expected_testdata/regenerate_from_seed_index/hoodi/: deposit_data-1755078158.json  keystore-m_12381_3600_1_0_0-1755078158.json  keystore-m_12381_3600_2_0_0-1755078158.json
tests/e2e/expected_testdata/regenerate_from_seed_index/sepolia/: deposit_data-1755078034.json  keystore-m_12381_3600_1_0_0-1755078034.json  keystore-m_12381_3600_2_0_0-1755078034.json
tests/e2e/expected_testdata/testcase1/: deposit_data-1668613231.json  keystore-m_12381_3600_0_0_0-1668613231.json
tests/e2e/expected_testdata/testcase2/: keystore-m_12381_3600_0_0_0-1669709160.json
tests/e2e/expected_testdata/withdrawal_credentials_bls/: deposit_data-1668613231.json
tests/e2e/expected_testdata/withdrawal_credentials_bls/hoodi/: deposit_data-1755000050.json  keystore-m_12381_3600_0_0_0-1755000050.json
tests/e2e/expected_testdata/withdrawal_credentials_bls/sepolia/: deposit_data-1755012899.json  keystore-m_12381_3600_0_0_0-1755012899.json
tests/e2e/expected_testdata/withdrawal_credentials_execution/: deposit_data-1669709160.json
tests/e2e/expected_testdata/withdrawal_credentials_execution/hoodi/: deposit_data-1755073089.json  keystore-m_12381_3600_0_0_0-1755073089.json
tests/e2e/expected_testdata/withdrawal_credentials_execution/sepolia/: deposit_data-1755072599.json  keystore-m_12381_3600_0_0_0-1755072599.json
tests/resources/: testnet.yaml
tests/resources/expected_testdata/testcase3/: deposit_data-1670231001.json
