[package]
name = "eth-staking-smith"
version = "0.1.0-dev"
edition = "2021"
description = "Deposit CLI replacement library"
authors = ["tech@chorus.one"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eth_staking_smith"
path = "src/lib.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
ethereum_hashing = "0.7.0"
eth2_key_derivation = { git = "https://github.com/ChorusOne/lighthouse", rev = "d6ba8c397557f5c977b70f0d822a9228e98ca214"}
eth2_keystore = { git = "https://github.com/ChorusOne/lighthouse", rev = "d6ba8c397557f5c977b70f0d822a9228e98ca214"}
eth2_network_config = { git = "https://github.com/ChorusOne/lighthouse", rev = "d6ba8c397557f5c977b70f0d822a9228e98ca214" }
ethereum_ssz = "0.5.4"
eth2_wallet = { git = "https://github.com/ChorusOne/lighthouse", rev = "d6ba8c397557f5c977b70f0d822a9228e98ca214"}
ethereum-types = { version = "0.14.1", optional = true }
env_logger = "^0.11"
hex = "0.4"
lazy_static = "1.5"
log = "^0.4"
getrandom = "0.2"
regex = "1.10.6"
serde = "1.0.204"
serde_derive = "1.0"
serde_json = "1.0"
ssz_rs = { git = "https://github.com/ChorusOne/ssz-rs.git", rev = "1f94d5dfc70c86dab672e91ac46af04a5f96c342" }
ssz_rs_derive = { git = "https://github.com/ChorusOne/ssz-rs.git", rev = "1f94d5dfc70c86dab672e91ac46af04a5f96c342" }
tiny-bip39 = "1.0.0"
# This must be pinned to a version that lighthouse uses
tree_hash = "0.6.0"
types = { git = "https://github.com/ChorusOne/lighthouse", rev = "d6ba8c397557f5c977b70f0d822a9228e98ca214"}
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
test-log = "^0.2"
pretty_assertions = "^1.4"
assert_cmd = "2.0"
predicates = "3.0"

[[test]]
name = "e2e-tests"
path = "tests/lib.rs"
