[package]
name = "eth-staking-smith"
version = "0.1.0-dev"
edition = "2021"
description = "Deposit CLI replacement library"
authors = ["tech@chorus.one"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eth_staking_smith"
path = "src/lib.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive", "env"] }
ethereum_hashing = "0.6.0"
eth2_key_derivation = { git = "https://github.com/ChorusOne/lighthouse", rev = "1be5253610dc8fee3bf4b7a8dc1d01254bc5b57d"}
eth2_keystore = { git = "https://github.com/ChorusOne/lighthouse", rev = "1be5253610dc8fee3bf4b7a8dc1d01254bc5b57d"}
eth2_network_config = { git = "https://github.com/ChorusOne/lighthouse", rev = "1be5253610dc8fee3bf4b7a8dc1d01254bc5b57d" }
ethereum_ssz = "0.5.4"
ethereum_ssz_derive = "0.5.4"
eth2_wallet = { git = "https://github.com/ChorusOne/lighthouse", rev = "1be5253610dc8fee3bf4b7a8dc1d01254bc5b57d"}
env_logger = "^0.11"
hex = "0.4"
lazy_static = "1.5"
log = "^0.4"
# eth2_network_config uses native-tls, so do we
reqwest = { version = "0.11", default-features = false, features = ["native-tls"] }
getrandom = "0.2"
regex = "1.10.6"
serde = "1.0.204"
serde_derive = "1.0"
serde_json = "1.0"
tiny-bip39 = "1.0.0"
# This must be pinned to a version that lighthouse uses
tree_hash = "0.5.2"
tree_hash_derive = "0.5.2"
types = { git = "https://github.com/ChorusOne/lighthouse", rev = "1be5253610dc8fee3bf4b7a8dc1d01254bc5b57d"}
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
test-log = "^0.2"
pretty_assertions = "^1.4"
assert_cmd = "2.0"
predicates = "3.0"
httpmock = "0.7"

[[test]]
name = "e2e-tests"
path = "tests/lib.rs"
